# pa-tests

./: .envrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  signature
.github/workflows/: rust.yml
crates/harness/core/: Cargo.toml
crates/harness/core/src/: environment.rs  identities.rs  lib.rs  mocks.rs  witness.rs
crates/harness/evm/: Cargo.toml
crates/harness/evm-action-generic-call/: Cargo.toml
crates/harness/evm-action-generic-call/src/: action.rs  lib.rs  resource.rs
crates/harness/evm-action-transfer/: Cargo.toml
crates/harness/evm-action-transfer/src/: action.rs  fixtures.rs  lib.rs  permit2.rs  resource.rs
crates/harness/evm-action-trivial/: Cargo.toml
crates/harness/evm-action-trivial/src/: action.rs  lib.rs
crates/harness/evm-erc20/: Cargo.toml
crates/harness/evm-erc20-forwarder/: Cargo.toml
crates/harness/evm-erc20-forwarder/src/: erc20_forwarder_bindings.rs  lib.rs
crates/harness/evm-erc20-forwarder/src/state/: addresses.rs  keys.rs
crates/harness/evm-erc20/artifacts/: WETH9.json
crates/harness/evm-erc20/src/: example_erc20_bindings.rs  lib.rs  weth_bindings.rs
crates/harness/evm-generic-call-forwarder/: Cargo.toml
crates/harness/evm-generic-call-forwarder/src/: generic_call_forwarder_bindings.rs  lib.rs
crates/harness/evm-generic-call-forwarder/src/state/: addresses.rs  keys.rs
crates/harness/evm-mock-permit2/: Cargo.toml
crates/harness/evm-mock-permit2/src/: lib.rs
crates/harness/evm-mock-permit2/tests/: runtime_code.rs
crates/harness/evm/artifacts/: MockRiscZeroVerifierEmergencyStop.json  MockRiscZeroVerifierRouter.json
crates/harness/evm/src/: envs.rs  pa.rs
crates/harness/evm/src/envs/e2e/: config.rs  mod.rs  prover.rs  queue.rs  setup.rs
crates/harness/evm/src/envs/integration_test/: evm_convert.rs  evm_execute.rs  mod.rs  prover.rs  setup.rs
crates/harness/evm/src/state/: actors.rs  chains.rs  keys.rs  mod.rs  pa.rs
crates/pa-integration-test-harness/: Cargo.toml
crates/pa-integration-test-harness/src/: environment.rs  lib.rs  witness.rs
crates/testing/pa-evm-integration-tests/: Cargo.toml
crates/testing/pa-evm-tests/: Cargo.toml
crates/testing/pa-evm-tests/src/: lib.rs
crates/testing/pa-evm-tests/tests/: trivial_logic.rs
crates/testing/pa-integration-test-harness/src/environment/: simulated.rs
crates/testing/pa-integration-tests/src/: lib.rs
crates/testing/pa-integration-tests/tests/: trivial_logic.rs
crates/testing/pa-test-harness-core/: Cargo.toml
crates/testing/pa-test-harness-core/src/: environment.rs  lib.rs  mocks.rs
crates/testing/pa-test-harness-evm/: Cargo.toml
crates/testing/pa-test-harness-evm-action-trivial/: Cargo.toml
crates/testing/pa-test-harness-evm-action-trivial/src/: resource.rs
crates/testing/pa-test-harness-evm-erc20/: Cargo.toml
crates/testing/pa-test-harness-evm-erc20/artifacts/: ERC20Example.json  IERC20.json
crates/testing/pa-test-harness-evm-erc20/src/: addresses.rs  example_erc20_bindings.rs  ierc20_bindings.rs  keys.rs  lib.rs  weth_bindings.rs
crates/testing/pa-test-harness-evm-erc20/src/state/: addresses.rs  keys.rs
crates/testing/pa-test-harness-evm-mock-permit2/: Cargo.toml
crates/testing/pa-test-harness-evm-mock-permit2/src/: lib.rs
crates/testing/pa-test-harness-evm/artifacts/: MockRiscZeroVerifier.json
crates/testing/pa-test-harness-evm/src/: envs.rs  lib.rs  mock_risc0_bindings.rs  pa.rs
crates/testing/pa-test-harness-evm/src/envs/: integration_tests.rs
crates/testing/pa-test-harness-evm/src/envs/integration_test/: prover.rs
crates/testing/pa-test-harness-evm/src/envs/integration_tests/: evm_execute.rs  mod.rs  prover.rs  setup.rs  tests.rs
crates/testing/pa-test-harness-evm/src/state/: chains.rs  mod.rs
crates/tests/evm/: Cargo.toml
crates/tests/evm/src/: lib.rs
crates/tests/evm/tests/: transfer_logic.rs  trivial_logic.rs  wrap_unwrap_weth_via_generic_call.rs
docs/agents/: architecture.md  coding-guidelines.md  patterns-deploy.md  patterns-env-tests.md  patterns-state.md
