[workspace]
members = [
  "crates/harness/core",
  "crates/harness/evm-action-trivial",
  "crates/harness/evm-erc20",
  "crates/harness/evm-mock-permit2",
  "crates/harness/evm",
  "crates/tests/evm",
]
resolver = "3"

[workspace.package]
authors = ["Heliax <hello@heliax.dev>"]
edition = "2024"
license = "GPL-3.0"
readme = "README.md"
version = "2.0.0-rc2"

[workspace.dependencies]
alloy = { version = "1.1.2", default-features = false }
alloy-chains = "0.2.18"
anoma-pa-evm-bindings = "2.1.0"
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anyhow = "1.0"
bincode = "1.3.3"
hex = "0.4"
mockall = "0.14.0"
regex = "1.12.3"
risc0-zkvm = "3.0.3"
rstest = "0.26.1"
sha2 = "0.11.0"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
