[package]
name = "pa-test-harness-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
mocks = ["dep:mockall"]

[dependencies]
anoma-rm-risc0 = { workspace = true, features = ["transaction", "compliance_circuit"] }
anyhow.workspace = true
mockall = { workspace = true, optional = true }
risc0-zkvm.workspace = true
