[package]
name = "pa-test-harness-evm-action-generic-call"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core.workspace = true

anoma-rm-risc0.workspace = true
anyhow.workspace = true
generic_call_library.workspace = true
generic_call_witness.workspace = true
risc0-zkvm.workspace = true

[dev-dependencies]
pa-test-harness-core = { workspace = true, features = ["mocks"] }
