[package]
name = "pa-test-harness-evm-action-transfer"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core.workspace = true

alloy = { workspace = true, features = ["eip712", "signer-local", "sol-types"] }
anoma-rm-risc0 = { workspace = true, features = ["compliance_circuit"] }
anoma-rm-risc0-gadgets.workspace = true
anyhow.workspace = true
bincode.workspace = true
transfer_witness.workspace = true

[dev-dependencies]
pa-test-harness-core = { workspace = true, features = ["mocks"] }
