[package]
name = "pa-test-harness-evm-erc20-forwarder"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
erc20-forwarder-bindings = ["dep:anomapay-erc20-forwarder-bindings"]

[dependencies]
pa-test-harness-core.workspace = true

alloy = { workspace = true, features = ["contract", "providers", "json", "sol-types"] }
anomapay-erc20-forwarder-bindings = { workspace = true, optional = true }
anyhow.workspace = true

[dev-dependencies]
pa-test-harness-core = { workspace = true, features = ["mocks"] }
