[package]
name = "pa-test-harness-evm-generic-call-forwarder"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
generic-call-forwarder-bindings = ["dep:anoma-generic-call-forwarder-bindings"]

[dependencies]
pa-test-harness-core.workspace = true

alloy = { workspace = true, features = ["contract", "providers", "json", "sol-types"] }
anoma-generic-call-forwarder-bindings = { workspace = true, optional = true }
anyhow.workspace = true

[dev-dependencies]
pa-test-harness-core = { workspace = true, features = ["mocks"] }
