[package]
name = "pa-test-harness-evm-mock-permit2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core = { path = "../core" }

alloy = { workspace = true, features = ["node-bindings", "providers", "rpc-types", "json"] }
anyhow.workspace = true

[dev-dependencies]
pa-test-harness-core = { path = "../core", features = ["mocks"] }
tokio.workspace = true
