[package]
name = "pa-test-harness-evm"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = ["pa-bindings"]
pa-bindings = ["dep:anoma-pa-evm-bindings"]
mock-risc0-bindings = []
e2e = ["pa-bindings", "dep:heliax-ap-orchestrator-sdk", "dep:clap", "dep:futures"]

[dependencies]
pa-test-harness-core.workspace = true

alloy = { workspace = true, features = ["full", "json", "signer-local", "node-bindings", "sol-types"] }
alloy-chains.workspace = true
anoma-pa-evm-bindings = { workspace = true, optional = true }
anoma-rm-risc0.workspace = true
anyhow.workspace = true
bincode.workspace = true
clap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
heliax-ap-orchestrator-sdk = { workspace = true, optional = true }
hex.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
pa-test-harness-core = { workspace = true, features = ["mocks"] }
pa-test-harness-evm-action-trivial.workspace = true
