[package]
name = "pa-evm-integration-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core = { path = "../pa-test-harness-core" }
pa-test-harness-evm = { path = "../pa-test-harness-evm", features = ["pa-bindings", "mock-risc0-bindings"] }
pa-test-harness-evm-action-trivial = { path = "../pa-test-harness-evm-action-trivial" }

anyhow.workspace = true
risc0-zkvm.workspace = true

[dev-dependencies]
tokio.workspace = true
