[package]
name = "pa-test-harness-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []
mocks = ["dep:mockall"]

[dependencies]
anoma-pa-evm-bindings.workspace = true
anoma-rm-risc0.workspace = true
anyhow.workspace = true
mockall = { workspace = true, optional = true }
