[package]
name = "pa-test-harness-evm-mock-permit2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core = { path = "../pa-test-harness-core" }

alloy.workspace = true
anyhow.workspace = true

[dev-dependencies]
pa-test-harness-core = { path = "../pa-test-harness-core", features = ["mocks"] }
tokio.workspace = true
