[package]
name = "pa-test-harness-evm"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core = { path = "../pa-test-harness-core" }

alloy = { workspace = true, features = ["sol-types"] }
anoma-pa-evm-bindings.workspace = true
anoma-rm-risc0.workspace = true
anyhow.workspace = true
bincode.workspace = true
risc0-zkvm.workspace = true
sha2.workspace = true
