[package]
name = "pa-evm-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
pa-test-harness-core.workspace = true
pa-test-harness-evm = { workspace = true, features = ["pa-bindings", "mock-risc0-bindings"] }
pa-test-harness-evm-action-trivial.workspace = true

anyhow.workspace = true
bincode.workspace = true
regex.workspace = true
risc0-zkvm.workspace = true
rstest.workspace = true

[dev-dependencies]
tokio.workspace = true
