[package]
name = "pa-evm-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
e2e = ["pa-test-harness-evm/e2e"]

[dependencies]
pa-test-harness-core.workspace = true
pa-test-harness-evm = { workspace = true, features = ["pa-bindings", "mock-risc0-bindings"] }
pa-test-harness-evm-action-generic-call.workspace = true
pa-test-harness-evm-action-transfer.workspace = true
pa-test-harness-evm-action-trivial.workspace = true
pa-test-harness-evm-erc20 = { workspace = true, features = ["example-erc20-bindings", "ierc20-bindings", "weth-bindings"] }
pa-test-harness-evm-erc20-forwarder = { workspace = true, features = ["erc20-forwarder-bindings"] }
pa-test-harness-evm-generic-call-forwarder = { workspace = true, features = ["generic-call-forwarder-bindings"] }
pa-test-harness-evm-mock-permit2.workspace = true

alloy = { workspace = true, features = ["providers", "signer-local"] }
alloy-chains.workspace = true
anyhow.workspace = true
bincode.workspace = true
generic_call_witness.workspace = true
regex.workspace = true
risc0-zkvm.workspace = true
rstest.workspace = true

[dev-dependencies]
tokio.workspace = true
